--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,286 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
 
     <header class="header">
         <nav class="navbar">
             <ul>
-               <li class="navbar__list"><a href="#" class="navbar__link a">.Home</a></li>
-               <li class="navbar__list"><a href="./pages/categories.html" class="navbar__link a">.Categories</a></li>
-               <li class="navbar__list"><a href="./pages/gallery.html" class="navbar__link a">.Gallery</a></li>
-               <li class="navbar__list"><a href="./pages/admin.html" class="navbar__link a">.Admin</a></li>
+               <li class="navbar__list"><a href="#" class="navbar__link a">г. Минск</a></li>
+               <li class="navbar__list"><a href="#" class="navbar__link a">+375 (29) 7072788</a></li>
+               <li class="navbar__list"><a href="#" class="navbar__link a">+375 (33) 7072788</a></li>
+
+               <span class="text">
+               <li class="navbar__list"><a href="#" class="navbar__link a">Фотомагазин</a></li>
+               <li class="navbar__list"><a href="#" class="navbar__link a">Доставка и оплата</a></li>
+               <li class="navbar__list"><a href="#" class="navbar__link a">Трейд-ин</a></li>
+              </span>
+           </ul>
+
+           <ul>
+            <li class="navbar__list"><a href="№" class="navbar__link a">Категории</a></li>
+            <li class="navbar__list"><a href="№" class="navbar__link a">Photomarket</a></li>
+            <input class="input" action="" img src="./img/icons/search.png" alt="img">Я ищу... </input>
+            <li class="navbar__list"><img src="./img/icons/map pin.png" alt="icon"></li>
+            <li class="navbar__list"><img src="./img/icons/Войти.png" alt="icon"></li>
+            <li class="navbar__list"><img src="./img/icons/shopping cart.png" alt="icon"></li>
            </ul>
        </nav>
        </header> 
 
-    <main class="main">
+    <main>
 
-        <section>
+        <section class="container">
             <div class="swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="product">
+                        <div class="product__item">
+                        <img src="./img/first page/main.png" alt="Img">
+                        <h3 class="product__title">Шедевры в деталях вместе с Nikon Z7II</h3>
+                        <p class="product__description">Представляем совершенно новую фотокамеру Z 7II</p>
+                        <a class="btn1 link" href="#">Узнать больше</a>
+                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-scrollbar"></div>
  </div>
         </section>
+
+        <section class="container section">
+        <div class="section__block">
+         <div class="card">
+            <p class="card__description">Canon EOS 5D</p>
+            <p class="card__description">Mark IV Body</p>
+
+            <p class="card__price">4 240р</p>
+
+            <img class="card__image" src="./img/first page/image 1.png" alt="Img">
+         </div>
+
+         <div class="card">
+            <p class="card__description">Canon EOS</p>
+            <p class="card__description">M200 Kit</p>
+
+            <p class="card__price">1 100р</p>
+
+            <img class="card__image" src="./img/first page/image 2.png" alt="Img">
+         </div>
+
+         <div class="card">
+            <p class="card__description">Nikon 85mm</p>
+            <p class="card__description">f/1.4G AF-S Nikkor</p>
+
+            <p class="card__price">4 240р</p>
+
+            <img class="card__image" src="./img/first page/image 3.png" alt="Img">
+         </div>
+        </div>
+        </section>
+
+
+        <section class="container section">
+            <h3 class="title-section">Хиты продаж</h3>
+
+            <div class="section__block">
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/image 1.png" alt="Img">
+
+                    <p class="card1__price">4 240р <span class="text-decoration"> 5 400р</span></p>
+                    <p class="card1__description">Canon EOS 5D</p>
+                </div>      
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/2.png" alt="Img">
+
+                    <p class="card1__price">4 240р <span class="text-decoration"> 5 400р</span></p>
+                    <p class="card1__description">Объектив Canon EF 50mm f/1.2L USM</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/3.png" alt="Img">
+
+                    <p class="card1__price">6 705р <span class="text-decoration"> 7 560р</span></p>
+                    <p class="card1__description">Fujifilm x-519 Body</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/4.png" alt="Img">
+
+                    <p class="card1__price">45 р</p>
+                    <p class="card1__description">FST LS-210 Стойка</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/5.png" alt="Img">
+
+                    <p class="card1__price">45 р</p>
+                    <p class="card1__description">Сумка Lowepro Apex 140 AW</p>
+                </div>                 
+            </div>
+
+            <div class="section__block">
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/6.png" alt="Img">
+
+                    <p class="card1__price">2 400р</p>
+                    <p class="card1__description">Canon PowerShot G7 X Mark II</p>
+                </div>      
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/7.png" alt="Img">
+
+                    <p class="card1__price">3 540р <span class="text-decoration"> 4 100р</span></p>
+                    <p class="card1__description">Стабилизатор DJI RS 2</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/8.png" alt="Img">
+
+                    <p class="card1__price">890 р</p>
+                    <p class="card1__description">Canon Speedlite EL-100</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/9.png" alt="Img">
+
+                    <p class="card1__price">450 р</p>
+                    <p class="card1__description">Источник света Profoto C1 Plus для смартфона</p>
+                </div> 
+
+                <div class="card1">                             
+                    <img class="card1__image" src="./img/first page/10.png" alt="Img">
+
+                    <p class="card1__price">5 000р</p>
+                    <p class="card1__description">Объектив Fujifilm XF 80mm f/2.8 R LM OIS WR Macro</p>
+                </div>                 
+            </div>
+
+            <div class="second-block">
+            <a class="btn btn__view" href="#">Показать еще</a>
+            </div>
+
+        </section>
+
+        <section class="section">
+            <div class="section__block">
+                <img src="./img/first page/fuji.png" alt="Img">
+                <img src="./img/first page/Canon.png" alt="Img">
+                <img src="./img/first page/Nikon.png" alt="Img">
+                <img src="./img/first page/Sony.png" alt="Img">
+                <img src="./img/first page/pentax.png" alt="Img">
+            </div>
+        </section>
+
+        <section class="container section">
+            <h3 class="title-section">Обзоры</h3>
+
+            <div class="section__block">
+                <div>
+                    <img src="./img/first page/reviews 1.png" alt="Img">
+                    <p>Nikon Z6 II - большой обзор беззеокальной фотокамеры</p>
+                </div>
+
+                <div>
+                    <img src="./img/first page/reviews 2.png" alt="Img">
+                    <p>Zhiyun Crane 2S - новая легенда или незначительное обновление?</p>
+                </div>
+
+                <div>
+                    <img src="./img/first page/reviews 3.png" alt="Img">
+                    <p>6 лучших объективов Canon RF для видеосъемки</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="container section">
+            <h3 class="title-section">Ищите нас в инстаграмм</h3>
+
+            <div class="section__block">
+                <img src="./img/first page/instagram 1.png" alt="img">
+                <img src="./img/first page/instagram 2.png" alt="img">
+                <img src="./img/first page/instagram 3.png" alt="img">
+                <img src="./img/first page/instagram 4.png" alt="img">
+                <img src="./img/first page/instagram 5.png" alt="img">
+            </div>
+        </section>
+
+
+
+
+
+
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <nav class="footer__navbar">
+            <ul>
+                <li class="navbar__list"><a href="#" class="navbar__link a">фотоаппараты</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">объективы</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">студийный свет</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">аксессуары</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">вспышки</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">сумки</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">печать</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">гаджеты</a></li>
+            </ul>
+        </nav>
+
+        <nav class="footer__navbar">
+            <ul>
+                <li class="navbar__list"><a href="#" class="navbar__link a">фотомагазин</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">фотопрокат</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">трейд-ин</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">доставка</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">как купить?</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">способы оплаты</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">гарантия и возврат</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">сертификаты</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">скидки</a></li>
+            </ul>
+        </nav>       
+
+        <nav class="footer__navbar">
+            <ul >
+                <li class="navbar__list"><a href="#" class="navbar__link a">о компании</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">новости</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">акции</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">обзоры</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">контакты</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">вакансии</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">партнеры</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">отзывы</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">карта сайта</a></li>
+            </ul>
+        </nav>
+
+        <nav class="footer__navbar">
+            <ul >
+                <li class="navbar__list"><a href="#" class="navbar__link a">контактная информация</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">+37592901001010</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">г. Минск ул. Победителей д 3 пом 41</a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a">fotomagaz@gmail.com</a></li>
+            </ul>
+
+            <ul >
+                <li class="navbar__list"><a href="#" class="navbar__link a">способы оплаты</a></li>
+            </ul>
+
+            <ul class="footer__icons">
+                <li class="navbar__list"><a href="#" class="navbar__link a"><img src="./img/footer/image 48.png" alt="icon"></a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a"><img src="./img/footer/image 49.png" alt="icon"></a></li>
+                <li class="navbar__list"><a href="#" class="navbar__link a"><img src="./img/footer/image 50.png" alt="icon"></a></li>
+            </ul>
+        </nav>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./js/swiper.js" type="module"></script>
     
 </body>
 </html>
