--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@
                 <li class="icon list"><img src="./img/icons/user.png" alt="icon"><p class="icon__description">Войти</p></li>
                 <li class="icon list"><img src="./img/icons/shopping cart.png" alt="icon"><p class="icon__description">Корзина</p></li>
                 </span>
-               </ul>
+            </ul>
         </nav>
     </header>
 
     <main>
 
-        <section class="container">
+        <section class="container section-1">
             <div class="swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
@@ -56,7 +56,7 @@
                         <img class="product__image" src="./img/first page/main.png" alt="Img">
                         
                         <img class="product__vector-r" src="./img/icons/right vector.png" alt="icon">
-                        <h3 class="product__title">Шедевры в деталях вместе с Nikon Z7II</h3>
+                        <h3 class="product__title">Шедевры в деталях <span> вместе с Nikon Z7II</span></h3>
                         <p class="product__description">Представляем совершенно новую фотокамеру Z 7II</p>
                         <a class="product__btn link" href="#">Узнать больше</a>
                        </div>
@@ -67,7 +67,7 @@
  </div>
         </section>
 
-        <section class="container section">
+        <section class="container section section-2">
         <div class="section__block">
          <div class="card">
             <p class="card__description">Canon EOS 5D</p>
@@ -89,7 +89,7 @@
             <p class="card__price">1 100р</p>
 
             <img class="card__image" src="./img/first page/image 2.png" alt="Img">
-            <img src="./img/first page/Ellipse red.png" alt="">
+            <img src="./img/first page/Ellipse red.png" alt="icon">
             <p class="card__ellipse-red_discont">Скидка 25%</p>
          </div>
 
@@ -107,39 +107,61 @@
         </section>
 
 
-        <section class="container section">
+        <section class="container section section-3">
             <h3 class="title-section">Хиты продаж</h3>
 
+
             <div class="section__block">
-                <div class="card1">                             
+                <div class="card1 card-mobile">                             
+                    <img class="card1__image" src="./img/mobile/1.png" alt="Img">
+
+                    <a>
+                    <p class="card1__price">4 240р <a class="card1__price_discont"> 5 400р</a></p>
+                    <a class="card-mobile__button link" href="#">В корзину</a>
+                    </a>
+
+                    <p class="card1__description">Canon EOS 5D</p>
+                </div>      
+
+                <div class="card1 card-mobile">                             
+                    <img class="card1__image" src="./img/mobile/2.png" alt="Img">
+
+                    <p class="card1__price">4 240р <a class="card1__price_discont"> 5 400р</a></p>
+                    <a class="card-mobile__button link" href="#">В корзину</a>
+                    <p class="card1__description">Объектив Canon EF 50mm f/1.2L USM</p>
+                </div> 
+            </div>
+
+            <div class="section__block">
+                <div class="card1 card-1">                             
                     <img class="card1__image" src="./img/first page/image 1.png" alt="Img">
 
                     <p class="card1__price">4 240р <span class="card1__price_discont"> 5 400р</span></p>
                     <p class="card1__description">Canon EOS 5D</p>
                 </div>      
 
-                <div class="card1">                             
+                <div class="card1 card-2">                             
                     <img class="card1__image" src="./img/first page/2.png" alt="Img">
 
                     <p class="card1__price">4 240р <span class="card1__price_discont"> 5 400р</span></p>
                     <p class="card1__description">Объектив Canon EF 50mm f/1.2L USM</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-3">                             
                     <img class="card1__image" src="./img/first page/3.png" alt="Img">
 
                     <p class="card1__price">6 705р <span class="card1__price_discont"> 7 560р</span></p>
                     <p class="card1__description">Fujifilm x-519 Body</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-4">                             
                     <img class="card1__image" src="./img/first page/4.png" alt="Img">
 
                     <p class="card1__price">45 р</p>
                     <p class="card1__description">FST LS-210 Стойка</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-5">                             
                     <img class="card1__image" src="./img/first page/5.png" alt="Img">
 
                     <p class="card1__price">45 р</p>
@@ -148,21 +170,21 @@
             </div>
 
             <div class="section__block">
-                <div class="card1">                             
+                <div class="card1 card-6">                             
                     <img class="card1__image" src="./img/first page/6.png" alt="Img">
 
                     <p class="card1__price">2 400р</p>
                     <p class="card1__description">Canon PowerShot G7 X Mark II</p>
                 </div>      
 
-                <div class="card1">                             
+                <div class="card1 card-7">                             
                     <img class="card1__image" src="./img/first page/7.png" alt="Img">
 
                     <p class="card1__price">3 540р <span class="card1__price_discont"> 4 100р</span></p>
                     <p class="card1__description">Стабилизатор DJI RS 2</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-8">                             
                     <img class="card1__image" src="./img/first page/8.png" alt="Img">
 
 
@@ -170,14 +192,14 @@
                     <p class="card1__description">Canon Speedlite EL-100</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-9">                             
                     <img class="card1__image" src="./img/first page/9.png" alt="Img">
 
                     <p class="card1__price">450 р</p>
                     <p class="card1__description">Источник света Profoto C1 Plus для смартфона</p>
                 </div> 
 
-                <div class="card1">                             
+                <div class="card1 card-10">                             
                     <img class="card1__image" src="./img/first page/10.png" alt="Img">
 
                     <p class="card1__price">5 000р</p>
@@ -190,7 +212,7 @@
             </div>
         </section>
 
-        <section class="section">
+        <section class="section section-4">
             <div class="section__block">
                 <img src="./img/first page/fuji.png" alt="Img">
                 <img src="./img/first page/Canon.png" alt="Img">
@@ -200,7 +222,7 @@
             </div>
         </section>
 
-        <section class="container section">
+        <section class="container section section-5">
             <h3 class="title-section">Обзоры</h3>
 
             <div class="section__block">
@@ -221,7 +243,7 @@
             </div>
         </section>
 
-        <section class="container section">
+        <section class="container section section-6">
             <h3 class="title-section">Ищите нас в инстаграмм</h3>
 
             <div class="section__block">
@@ -301,6 +323,16 @@
         </nav>
     </footer>
 
+    <footer class="footer__mobile">
+    <nav>
+    <ul>
+        <li class="footer__icons list"><a href="#" class="link"><img src="./img/mobile/icons/home.png" alt="icon"></a></li>
+        <li class="footer__icons list"><a href="#" class="link"><img src="./img/mobile/icons/menu.png" alt="icon"></a></li>
+        <li class="footer__icons list"><a href="#" class="link"><img src="./img/mobile/icons/shopping cart.png" alt="icon"></a></li>
+        <li class="footer__icons list"><a href="#" class="link"><img src="./img/mobile/icons/user.png" alt="icon"></a></li>
+    </ul>
+    </nav>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js" type="module"></script>
