--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 <body>
 
     <header class="header">
-        <nav class="navbar">
+        <nav>
+        <div class="top">
             <ul>
                <li class="list"><a href="#" class="link">г. Минск</a></li>
                <li class="list"><a href="#" class="link">+375 (29) 7072788</a></li>
@@ -28,19 +29,22 @@
                 <li class="list"><a href="#" class="link text">Трейд-ин</a></li>
                </span>
             </ul>
+        </div>
 
+        <div class="top">
             <ul>
                 <li class="list"><a href="#" class="link header__burger">Категории</a></li>
                 <li class="list"><a href="#" class="link header__title">Photomarket</a></li>
                 <input class="input" img src="./img/icons/search.png" alt="img" placeholder=" Я ищу..."></input>
 
-                <span>
+            <span>
                 <li class="icon list"><img src="./img/icons/map pin.png" alt="icon"><p class="icon__description">Адрес</p></li>
                 <li class="icon list"><img src="./img/icons/user.png" alt="icon"><p class="icon__description">Войти</p></li>
                 <li class="icon list"><img src="./img/icons/shopping cart.png" alt="icon"><p class="icon__description">Корзина</p></li>
-                </span>
+            </span>
             </ul>
-        </nav>
+        </div>
+    </nav>
     </header>
 
     <main>
@@ -69,7 +73,7 @@
 
         <section class="container section section-2">
         <div class="section__block">
-         <div class="card">
+         <div class="card banner1">
             <p class="card__description">Canon EOS 5D</p>
             <p class="card__description">Mark IV Body</p>
 
@@ -82,7 +86,7 @@
             
          </div>
 
-         <div class="card">
+         <div class="card banner2">
             <p class="card__description">Canon EOS</p>
             <p class="card__description">M200 Kit</p>
 
@@ -93,7 +97,7 @@
             <p class="card__ellipse-red_discont">Скидка 25%</p>
          </div>
 
-         <div class="card">
+         <div class="card banner3">
             <p class="card__description">Nikon 85mm</p>
             <p class="card__description">f/1.4G AF-S Nikkor</p>
 
@@ -115,20 +119,39 @@
                 <div class="card1 card-mobile">                             
                     <img class="card1__image" src="./img/mobile/1.png" alt="Img">
 
-                    <a>
+                    <div class="card-top">
                     <p class="card1__price">4 240р <a class="card1__price_discont"> 5 400р</a></p>
                     <a class="card-mobile__button link" href="#">В корзину</a>
-                    </a>
+                    </div>
 
-                    <p class="card1__description">Canon EOS 5D</p>
+                    <p class="card1__description">Canon EOS 250D Kit EF-S 18-55mm f/4-5.6 IS STM silver</p>
+                    <div class="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <p>11</p>
+                    </div>
                 </div>      
 
                 <div class="card1 card-mobile">                             
                     <img class="card1__image" src="./img/mobile/2.png" alt="Img">
 
-                    <p class="card1__price">4 240р <a class="card1__price_discont"> 5 400р</a></p>
+                    <div class="card-top">
+                    <p class="card1__price">9 500р <a class="card1__price_discont"> 10 000р</a></p>
                     <a class="card-mobile__button link" href="#">В корзину</a>
-                    <p class="card1__description">Объектив Canon EF 50mm f/1.2L USM</p>
+                    </div>
+
+                    <p class="card1__description">Зеркальный фотоаппарат Canon EOS-1D X Mark ||| Body</p>
+                    <div class="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <img src="./img/mobile/icons/star.png" alt="star">
+                        <p>14</p>
+                    </div>
                 </div> 
             </div>
 
